--- a/sample.env
+++ b/sample.env
@@ -16,3 +16,5 @@ PGADMIN_VIRTUAL_HOST=pgadmin.mydomain.com
 # Web server for static content
 WEB_SERVER=maps.mydomain.com
 WEB_SERVER_MAIL=webmaster@mydomain.com
+
+CLOUDFLARE_API_TOKEN=undefined
